testing scroll issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+html {
+  overscroll-behavior: none;
+}
+
 body {
   overscroll-behavior: none;
   color: white;
